hello-world/guestbook-ui-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  containers:
  - image: "docker.io/nginxdemos/hello"
    name: hello-world
    ports:
    - containerPort: 80
      protocol: TCP
