hello-world/guestbook-ui-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /hello-world
        backend:
          service:
            name: hello-world
            port:
              number: 80
        pathType: Exact
